categories model routes controller added
